# bookstore

./: .env  .gitignore  Cargo.toml  README.md  migrate  run-tests  schema.sql
src/: args.rs  auth.rs  entidade.rs  error.rs  main.rs  patch.rs  prelude.rs  routes.rs
