[package]
name = "axum-patch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
dotenvy = "0.15.7"
eyre = "0.6.11"
serde = "1.0.196"
serde_with = "3.5.1"
sqlx = { version = "0.7.3", features = ["mysql", "time", "runtime-tokio"] }
thiserror = "1.0.56"
time = { version = "0.3.31", features = ["serde"] }
tokio = { version = "1.35.1", features = ["rt-multi-thread"] }
